javafx webview css filter property with display scaling

XMLWordPrintable

    • web
    • x86_64
    • windows

        ADDITIONAL SYSTEM INFORMATION :
        known: windows 10, jdk 10, display scaling 150%, 2560x1440

        A DESCRIPTION OF THE PROBLEM :
        it's common practice for higher resolution monitors in windows to have display scaling set to some value higher than 100%, typically 125/150%. however, when using webview with an image that has a filter css property applied (like grayscale or blur) the image is not updated/placed/scaled in the correct position

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        create a webview, apply a css filter property to an image (grayscale for example)

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        the images are rendered with the filtering applied
        ACTUAL -
        the images are rendered with the filtering applied BUT:
        the images are no longer in the same position/scaling

        ---------- BEGIN SOURCE ----------
        any webview will work, just go to:
        http://html5-demos.appspot.com/static/css/filters/index.html
        and the problem will be obvious
        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        set windows display scaling to 100%

        FREQUENCY : always


          1. simpleImage.html
            0.2 kB
            Priyanka Mangal
          2. mystyle.css
            0.1 kB
            Priyanka Mangal
          3. LoadHtml.java
            0.8 kB
            Priyanka Mangal
          4. pulpitrock.jpg
            56 kB
            Priyanka Mangal
          5. Compare_Chrome_FX.png
            538 kB
            Priyanka Mangal

              Assignee:
              Bhawesh Choudhary (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: