8202990: javafx webview css filter property with display scaling

Reviewed-by: kcr, ajoseph